// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when passwords match renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value="s3cure"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value="s3cure"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when there's an error renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="error"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;
